s4-1.4 Finish the Assignament - Added to EditItemActivity, Item that are Borrowed, can not be deleted!

--- a/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/res/values/strings.xml
+++ b/S4-Capstone-Assignment/_SharingApp-c1-items-only-v4/SharingApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sharing App</string>
+    <string name="app_name">Sharing App _ FyFT</string>
     <string name="title_hint">Title</string>
     <string name="maker_hint">Maker</string>
     <string name="description_hint">Description</string>
